--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@babel/cli": "^7.5.5",
     "@babel/core": "^7.5.5",
     "@babel/preset-env": "^7.5.5",
+    "@types/jest": "^24.0.16",
     "jest": "^24.8.0",
     "mini-css-extract-plugin": "^0.8.0",
     "typescript": "^3.5.3",
