--- a/package.json
+++ b/package.json
@@ -9,9 +9,18 @@
     "@babel/cli": "^7.5.5",
     "@babel/core": "^7.5.5",
     "@babel/preset-env": "^7.5.5",
+    "@testing-library/react": "^8.0.7",
     "@types/jest": "^24.0.16",
+    "@types/react": "^16.8.24",
+    "babel-jest": "^24.8.0",
     "jest": "^24.8.0",
+    "jest-stare": "^1.17.0",
     "mini-css-extract-plugin": "^0.8.0",
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6",
+    "ts-jest": "^24.0.2",
+    "tslint": "^5.18.0",
+    "tslint-config-airbnb": "^5.11.1",
     "typescript": "^3.5.3",
     "webpack": "^4.38.0",
     "webpack-cli": "^3.3.6",
@@ -20,6 +29,11 @@
   },
   "scripts": {
     "test": "jest",
+    "test:coverage": "jest --coverage --reporters default jest-stare",
     "client:dev": "webpack --mode development"
+  },
+  "jest-stare": {
+    "resultDir": "./docs/jest-stare/",
+    "coverageLink": "../jest-coverage/index.html"
   }
 }
