--- a/package.json
+++ b/package.json
@@ -6,26 +6,12 @@
   "author": "tjsglion <jiang.tang@aliyun.com>",
   "license": "MIT",
   "dependencies": {
-    "@babel/cli": "^7.5.5",
-    "@babel/core": "^7.5.5",
-    "@babel/preset-env": "^7.5.5",
-    "@testing-library/react": "^8.0.7",
-    "@types/jest": "^24.0.16",
-    "@types/react": "^16.8.24",
-    "babel-jest": "^24.8.0",
-    "jest": "^24.8.0",
-    "jest-stare": "^1.17.0",
-    "mini-css-extract-plugin": "^0.8.0",
+    "inversify": "^5.0.1",
+    "inversify-koa-utils": "^1.0.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "ts-jest": "^24.0.2",
-    "tslint": "^5.18.0",
-    "tslint-config-airbnb": "^5.11.1",
-    "typescript": "^3.5.3",
-    "webpack": "^4.38.0",
-    "webpack-cli": "^3.3.6",
-    "webpack-merge": "^4.2.1",
-    "yargs-parser": "^13.1.1"
+    "reflect-metadata": "^0.1.13",
+    "typescript": "^3.5.3"
   },
   "scripts": {
     "test": "jest",
@@ -35,5 +21,25 @@
   "jest-stare": {
     "resultDir": "./docs/jest-stare/",
     "coverageLink": "../jest-coverage/index.html"
+  },
+  "devDependencies": {
+    "@babel/cli": "^7.5.5",
+    "@babel/core": "^7.5.5",
+    "@babel/preset-env": "^7.5.5",
+    "@testing-library/react": "^8.0.7",
+    "@types/jest": "^24.0.16",
+    "@types/node": "^12.6.9",
+    "@types/react": "^16.8.24",
+    "babel-jest": "^24.8.0",
+    "jest": "^24.8.0",
+    "jest-stare": "^1.17.0",
+    "mini-css-extract-plugin": "^0.8.0",
+    "ts-jest": "^24.0.2",
+    "tslint": "^5.18.0",
+    "tslint-config-airbnb": "^5.11.1",
+    "webpack": "^4.39.0",
+    "webpack-cli": "^3.3.6",
+    "webpack-merge": "^4.2.1",
+    "yargs-parser": "^13.1.1"
   }
 }
