--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "inversify-koa-utils": "^1.0.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-router": "^5.0.1",
+    "react-router-dom": "^5.0.1",
     "reflect-metadata": "^0.1.13",
     "typescript": "^3.5.3"
   },
@@ -30,6 +32,8 @@
     "@types/jest": "^24.0.16",
     "@types/node": "^12.6.9",
     "@types/react": "^16.8.24",
+    "@types/react-dom": "^16.8.5",
+    "@types/react-router-dom": "^4.3.4",
     "babel-jest": "^24.8.0",
     "jest": "^24.8.0",
     "jest-stare": "^1.17.0",
